# aurora

./: Cargo.toml  README.md
src/: component.rs  context.rs  current_dir.rs  error.rs  git_repo.rs  lib.rs  main.rs  parser.rs  shell.rs  static_component.rs  style.rs  token.rs  utility.rs
src/component/: character.rs  color.rs  cwd.rs  env.rs  git_branch.rs  git_commit.rs  git_stash.rs  git_status.rs  hostname.rs  jobs.rs  reset.rs  style.rs  tests.rs  user.rs
src/init/: init.bash  init.zsh
