[package]
name = "aurora_prompt"
version = "0.1.0"
authors = ["Odin Dutton <odindutton@gmail.com>"]
edition = "2018"

[dependencies]
nom = "5"
dirs = "2"
git2 = "0.10"
crossterm = { version = "0.13", default-features = false, features = ["style"] }
clap = { git = "https://github.com/clap-rs/clap" }
